reduce width of reply textarea to prevent horizontal scrollbar

--- a/css/mail.css
+++ b/css/mail.css
@@ -148,7 +148,7 @@ a.action.delete { float:right; }
 }
 
 .reply-message-body {
-	width: 95%;
+	width: 90%;
 	height: 50px;
 	resize: none;
 }
